# Joomla-Agent-Toolkit

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  agents.md  pyproject.toml
src/joomla_rag/: api.py  bridge.py  cli.py  ingest.py  inspect.py  scaffold.py  search.py  validate.py
src/joomla_rag/data/: SKILL.md
tests/: test_api.py  test_bridge.py  test_inspect.py  test_scaffold.py  test_scaffold_module.py  test_search.py  test_validate.py
