[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joomla-rag"
version = "0.1.0"
description = "CLI tool for querying Joomla documentation via RAG"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "langchain-community",
    "langchain-text-splitters",
    "langchain-huggingface",
    "langchain-chroma",
    "chromadb",
    "sentence-transformers",
]
requires-python = ">=3.8"

[project.scripts]
joomla-rag = "joomla_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["joomla_rag*"]

[tool.setuptools.package-data]
joomla_rag = ["data/SKILL.md", "data/docs/**/*", "data/chroma_db/**/*"]